--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2015 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2016 Google, Inc.  All rights reserved.
 # Copyright (c) 2008-2009 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -34,8 +34,9 @@ memory leaks, and (on Windows) handle leaks, GDI API usage errors, and
 accesses to un-reserved thread local storage slots.
 
 Dr. Memory is based on the DynamoRIO binary translation engine.  Dr. Memory
-has full support for Windows (XP and higher) and Linux, with early
-Mac OSX support (32-bit only) available as a Beta release.
+has full support for Windows (XP and higher) and Linux, with preliminary
+Mac OSX, Linux/ARM, and Android/ARM support (32-bit only for those three)
+available as a Beta release.
 
 Dr. Memory also includes a system call tracing tool for Windows and a
 symbol query utility.
