--- a/drmemory/docs/main.dox
+++ b/drmemory/docs/main.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2012-2015 Google, Inc.  All rights reserved.
+ * Copyright (c) 2012-2016 Google, Inc.  All rights reserved.
  * Copyright (c) 2009 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -33,8 +33,7 @@ memory leaks, and (on Windows) handle leaks, GDI API usage errors, and
 accesses to un-reserved thread local storage slots.
 
 Dr. Memory operates on unmodified application binaries running on Windows,
-Mac, or Linux \if VMX86_SERVER or ESXi \endif on commodity IA-32 and AMD64
-hardware.
+Mac, Linux, or Android on commodity IA-32, AMD64, and ARM hardware.
 
 This document describes how to use Dr. Memory.  It is divided into the
 following sections:
