i#1866: document how to disable /debug:fastlink for VS2015
VS2015 defaults to /debug:fastlink which produces a partial PDB without
line number information.  We update the docs to specify how to turn on full
PDB support.

Fixes #1866

Review-URL: https://codereview.appspot.com/293770043

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -272,7 +272,10 @@ properties of your build target. Under "Configuration Properties | C/C++ |
 General", the "Debug Information Format" entry should either say "Program
 Database (/Zi)" or "Program Database for Edit and Continue (/ZI)".
 Additionally, under "Configuration Properties | Linker | Debugging", the
-"Generate Debug Info" entry should say "Yes (/DEBUG)".
+"Generate Debug Info" entry should say "Yes (/DEBUG)".  For Visual Studio
+2015, under "Configuration Properties | Linker | Debugging", the
+"Generate Debug Info" entry should say "Optimize for debugging (/DEBUG)" --
+it should <em>not</em> say "Optimize for faster linking (/DEBUG:FASTLINK)".
 
 To disable inlining as recommended above, use the \p /Ob0 parameter.  In
 the Visual Studio IDE, press Alt-F7 and then under "Configuration
