Increase base version number to 1.10.0.
Increases the VERSION_NUMBER_DEFAULT to 1.10.x and adds a new entry in the
changelog for the next version.

Review-URL: https://codereview.appspot.com/287470043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,7 +60,10 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
-The changes between \TOOL_VERSION and version 1.9.0 include:
+The changes between \TOOL_VERSION and version 1.10.0 include:
+ - Nothing yet.
+
+The changes between 1.10.0 and version 1.9.0 include:
  - Added preliminary 64-bit Dr. Memory support for Windows and Linux (but
    not MacOS yet).  This does not yet include uninitialized read checking,
    so we still recommend compiling your application as 32-bit.
