i#1857: document how to configure and run Java Android apps
Adds docs on issues with configuration and log directories, SElinux, and
how to use a wrapper script for Java Android applications.  Along with
several earlier fixes, this completes the work for this issue.

Fixes #1857

Review-URL: https://codereview.appspot.com/297790043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -61,7 +61,9 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.10.0 include:
- - Nothing yet.
+ - Fixed problems with configuration directories on Android.
+ - Fixed several bugs, including Windows false positives, ARM
+   instrumentation issues, and VS2015 crashes.
 
 The changes between 1.10.0 and version 1.9.0 include:
  - Added preliminary 64-bit Dr. Memory support for Windows and Linux (but
