i#1908: support reading syscall numbers from a text file
Tries to help future-proof Dr. Memory on Windows by adding support for
reading system call numbers from a text file that we can provide to
avoid requiring a full package release.  Also adds related features to
support attempts at continued execution.

First, adds spot-checks of several syscalls to identify whether the
built-in tables are correct.  When the built-in tables are not
correct, or we cannot identify the Windows version, attempts to read
the numbers from a text file in the bin directory.  If there is no
file, or the file's contents do not contain entries for the current
kernel, prints a message to the user to download a new file from
dynamorio.org.

Adds a new option -ignore_kernel which allows for continuing past the
message.  For this feature, we refactor the code to attempt to obtain
win32k.sys numbers from wrappers at module load time, including looking in
win32u.dll.  We also relax some asserts when running this way.

As the drsyscall library is the one reading the file, we document the
format and pass in a path to the file.

Changes the general order in which syscall numbers are obtained:
avoids bothering to read the wrappers when the tables are correct.

Review-URL: https://codereview.appspot.com/305350043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -61,6 +61,10 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.10.1 include:
+ - Added support for loading system call numbers from a file, to make
+   it easier to update for future major Windows 10 updates.
+ - Added an option -ignore_kernel to attempt to continue on even when
+   running on a kernel with unknown system call numbers.
  - Added support for Mac OSX El Capitan.
 
 The changes between 1.10.1 and version 1.10.0 include:
@@ -74,6 +78,7 @@ The changes between 1.10.0 and version 1.9.0 include:
    so we still recommend compiling your application as 32-bit.
  - Added preliminary Linux/ARM and Android/ARM 32-bit Dr. Memory support.
    This does not yet include uninitialized read checking.
+ - Added support for Windows 10 1511.
  - Fixed incremental error output to the console for graphical
    applications, which was missing in prior versions when using certain
    consoles such as cmd.
