i#1910: add El Capitan support
Fixes several build warnings: a warning from the new clang on our
deliberate new/delete mismatches in the tests; removed syscalls; an empty
if warning.

Bumps the supported version as our tests all pass.

Fixes #1910

Review-URL: https://codereview.appspot.com/301690043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -61,7 +61,7 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.10.1 include:
- - Nothing yet: TBD.
+ - Added support for Mac OSX El Capitan.
 
 The changes between 1.10.1 and version 1.10.0 include:
  - Fixed problems with configuration directories on Android.
