DRi#1991: only support OSX 10.9+
Due to inability to easily build binaries for 10.7, and the fact that Mac
in general needs less legacy support, we bump our minimum supported Mac
version to OSX 10.9 (Mavericks).

Updates DR to 759cb2b for i#1991: ensure flag changes apply to C++ targets,
to ensure that drsyms is built for the right OSX target.

Review-URL: https://codereview.appspot.com/306310043

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -99,6 +99,9 @@ install using a standalone Dr. Memory package.
 Ensure your compiler is able to build 32-bit applications.  XCode by
 default is able to do so.
 
+Operating systems older than OSX 10.9 (Mavericks) are not officially
+supported.
+
 ********************
 \section sec_macos_install Installing
 
