i#1976 Win10-1703: update syscall tables and version checks
Adds the Windows 10 1703 syscall numbers and table entries for ntoskrnl,
ntgdi, ntuser, and usercall system calls.  Updates the associated arrays.
Updates mksyscalltxt.pl.

Some usercall numbers are not known and are guessed at for now.

Updates version checks for 1703.

Updates DR to 1318ff2 for DR_WINDOWS_VERSION_10_1703 version support.

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -65,6 +65,7 @@ The changes between \TOOL_VERSION and version 1.11.0 include:
    checking) support for Linux.
  - Added preliminary support for the Windows Subsystem for Linux
    environment with the regular Dr. Memory Linux package.
+ - Added support for Windows 10 1703.
 
 The changes between version 1.11.0 and version 1.10.1 include:
  - Added support for Windows 10 1607.
