i#1948 drltrace libcall args printing: config file init
Implemented simplified language for function prototypes description
to provide an external source where user can define custom libcalls
to be able to print arguments.

Added config file parsing routines
Added hashtable to store libcalls info
Added strings printing routine
Added a third way to print arguments
Added simplified config file with strcmp/wcscmp/printf/puts prototypes
Added tests for Windows and Linux

--- a/drltrace/drltrace.dox
+++ b/drltrace/drltrace.dox
@@ -43,9 +43,9 @@ to print them in a log file.
 Similar to Linux ltrace tool, drltrace supports an external configuration file where a
 user may describe his/her own function prototypes for printing. The configuration file
 provides a simple syntax to add new functions; it's enough to specify each element
-(return type, function name, arguments) of the function separated by commas in a separated
-line. See drltrace.conf for more details and examples. The configuration file should be in
-ASCII.
+(return type, function name, arguments) of the function separated by a pipe | symbol in a
+separated line. See drltrace.conf for more details and examples. The configuration file
+should be in ASCII.
 
 
 The usefull runtime options for this tool include:
