--- a/drltrace/drltrace.dox
+++ b/drltrace/drltrace.dox
@@ -36,12 +36,11 @@
 \page page_drltrace Library Tracing Tool
 
 drltrace is a standalone tool based on the Dr. Memory framework that records calls to
-shared libraries. It reports all invocations of exported functions in all shared libraries
-loaded into the target process. The tool also records library call arguments and allows
-to print them in a log file.
+shared libraries and their arguments and return values. It reports all invocations of
+exported functions in all shared libraries loaded into the target process.
 
-Similar to Linux ltrace tool, drltrace supports an external configuration file where a
-user may describe his/her own function prototypes for printing. The configuration file
+Similarly to the Linux ltrace tool, drltrace supports an external configuration file where
+a user may describe his/her own function prototypes for printing. The configuration file
 provides a simple syntax to add new functions; it's enough to specify each element
 (return type, function name, arguments) of the function separated by a pipe | symbol in a
 separated line. See drltrace.conf for more details and examples. The configuration file
