--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 # Copyright (c) 2010-2016 Google, Inc.  All rights reserved.
 # Copyright (c) 2008-2009 VMware, Inc.  All rights reserved.
 # **********************************************************
-
+Test a diff
 # Dr. Memory: the memory debugger
 #
 # This library is free software; you can redistribute it and/or
