Increase version to 2.2.0.
Increases the version number to 2.2.0.
Updates the changelog.
Increases the required DR version to support win10 1903.

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,6 +60,9 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between \TOOL_VERSION and version 2.2.0 include:
+ - Nothing yet.
+
 The changes between version 2.2.0 and version 2.1.0 include:
  - Fixed a problem with Windows 10 1903.
 
